--- a/css/style.css
+++ b/css/style.css
@@ -26,8 +26,8 @@ a {
     font-family: 'Passion One', cursive;
 }
 #logo{
-    width: 120px;
-    height: 120px;
+    width: 110px;
+    height: 116px;
     background: url('../img/logo.png') no-repeat center;
     background-size: contain;
     -webkit-background-size: contain;
@@ -36,23 +36,22 @@ a {
     -webkit-transform-origin: 0 0;
     -ms-transform-origin: 0 0;
     transform-origin: 0 0;
-    transform: scale(0.585938);
 }
 #score__bar{
-    width: 281px;
-    height: 87px;
+    width: 274px;
+    height: 83px;
     background: url('../img/bar.png') no-repeat center;
     background-size: contain;
     -webkit-background-size: contain;
     font-size: 35pt;
     color: #ffe302;
-    text-shadow: 1px 1px 2px #100a05;
+    font-weight: 400;
+    text-shadow: 2px 2px 2px #100a05;
     text-align: center;
-    line-height: 73px;
+    line-height: 66px;
     right: 1%;
     top: 1%;
-    -webkit-transform-origin: 0 0;
-    -ms-transform-origin: 0 0;
-    transform-origin: 0 0;
-    transform: scale(0.585938);
+    -webkit-transform-origin: top right;
+    -ms-transform-origin: top right;
+    transform-origin: top right;
 }
