--- a/css/style.css
+++ b/css/style.css
@@ -358,9 +358,15 @@ a {
     background: url(../img/nature.png) no-repeat center;
     background-size: contain;
 }
-.nature_damagde{
+
+.nature_damagde {
     background: url('../img/natureDamaged.png') no-repeat center !important;
     background-size: contain;
+    width: 583px !important;
+    height: 300px !important;
+    left: 51.5% !important;
+    margin-left: -291.5px !important;
+    bottom: 163px !important;
 }
 
 #island #nature_atc__btn {
@@ -384,7 +390,8 @@ a {
     background: url('../img/ship.png') no-repeat center;
     background-size: contain;
 }
-.ship_damaged{
+
+.ship_damaged {
     background: url('../img/shipDamaged.png') no-repeat center !important;
     background-size: contain;
 }
@@ -411,9 +418,16 @@ a {
     background: url(../img/house.png) no-repeat center;
     background-size: contain;
 }
-.house_damaged{
+
+.house_damaged {
     background: url('../img/house_Damaged.png') no-repeat center !important;
     background-size: contain;
+    width: 457px !important;
+    height: 251px !important;
+    left: 39% !important;
+    top: 63% !important;
+    margin-top: -125.5px !important;
+    margin-left: -228.5px !important;
 }
 
 #island #house_atc__btn {
@@ -438,7 +452,8 @@ a {
     background: url('../img/pet.png') no-repeat center;
     background-size: contain;
 }
-.pet_damaged{
+
+.pet_damaged {
     background: url('../img/petDamaged.png') no-repeat center !important;
     background-size: contain;
 }
@@ -454,11 +469,19 @@ a {
     background-size: contain;
     z-index: 2;
 }
-#island .btn_border{
+
+.attack_btn {
+    transition: transform .2s linear;
+    -o-transition: transform .2s linear;
+    -webkit-transition: transform .2s linear;
+}
+
+#island .btn_border {
     transition: border .2s linear, box-shadow .2s linear;
     -o-transition: border .2s linear, box-shadow .2s linear;
     -webkit-transition: border .2s linear, box-shadow .2s linear;
 }
+
 #island .active {
     width: 94px;
     left: 45%;
@@ -479,9 +502,67 @@ a {
     margin-top: -50px;
     margin-left: -50px;
 }
-#explr_canvas{
+
+#cannon__ball {
+    width: 153px;
+    height: 147px;
+    left: 50%;
+    opacity: 0;
+    bottom: 10%;
+    margin-left: -76.5px;
+    margin-top: -78.5px;
+    background: url('../img/cannonBall.png') no-repeat center;
+    background-size: contain;
+}
+
+#explr_canvas {
     width: 468px;
     height: 464px;
     margin-left: -234px;
     margin-top: -232px;
+}
+
+#spins_rays {
+    width: 766px;
+    height: 765px;
+    left: 50%;
+    top: 50%;
+    margin-left: -383px;
+    margin-top: -382.5px;
+    opacity: 0;
+    background: url('../img/rays.png') no-repeat center;
+    background-size: contain;
+    -webkit-transform-origin: center center;
+    -ms-transform-origin: center center;
+    transform-origin: center center;
+}
+
+#spins_bottle {
+    width: 212px;
+    height: 245px;
+    top: 50%;
+    left: 50%;
+    margin-left: -106px;
+    margin-top: -122.5px;
+    opacity: 0;
+    background: url('../img/spins_bottle.png') no-repeat center;
+    background-size: contain;
+    transition: transform 0.4s linear;
+    -o-transition: transform 0.4s linear;
+    -webkit-transition: transform 0.4s linear;
+}
+
+#spins_txt {
+    width: 342px;
+    height: 116px;
+    top: 25%;
+    left: 50%;
+    margin-left: -171px;
+    margin-top: -58px;
+    background: url('../img/spin_txt.png') no-repeat center;
+    background-size: contain;
+    transform: scale(0);
+    transition: transform 0.3s linear;
+    -o-transition: transform 0.3s linear;
+    -webkit-transition: transform 0.3s linear;
 }
