--- a/css/style.css
+++ b/css/style.css
@@ -136,37 +136,39 @@ a {
 #machine #spins__progress #glos {
     left: 20px;
     top: 12px;
-    -webkit-transition: all .3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-    -o-transition: all .3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-    transition: all .3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-}
-
-#machine #spins__progress .spins_15 {
-    background: url('../img/15_spins.png') no-repeat center;
-    background-size: contain;
+    background: url('../img/15_spins.png');
     width: 150px;
     height: 63px;
+    -webkit-transition: all 0.4s ease-in-out;
+    -o-transition: all 0.4s ease-in-out;
+    transition: all 0.4s ease-in-out;
 }
 
-#machine #spins__progress .spins_10 {
-    background: url('../img/10_spins_.png') no-repeat center;
-    background-size: contain;
-    width: 104px;
-    height: 61px;
+#machine #spins__progress #glos[data-value="0"] {
+    background: none;
 }
 
-#machine #spins__progress .spins_5 {
-    background: url('../img/5_spins.png') no-repeat center;
+#machine #spins__progress #glos[data-value="10"] {
+    background: url('../img/10_spins_.png') !important;
     background-size: contain;
-    width: 58px;
-    height: 50px;
+    width: 104px !important;
+    height: 61px !important;
 }
 
-#machine #spins__progress .spins_50 {
-    background: url('../img/50_spins.png') no-repeat center;
+#machine #spins__progress #glos[data-value="5"] {
+    background: url('../img/5_spins.png') !important;
     background-size: contain;
-    width: 279px;
-    height: 63px;
+    width: 58px !important;
+    height: 50px !important;
+}
+
+#machine #spins__progress #glos[data-value="50"] {
+    background: url('../img/50_spins.png') !important;
+    -webkit-transition: all 1.2s ease-in-out 0.3s !important;
+    -o-transition: all 1.2s ease-in-out 0.3s !important;
+    transition: all 1.2s ease-in-out 0.3s !important;
+    width: 279px !important;
+    height: 63px !important;
 }
 
 #spin__btn {
@@ -537,19 +539,40 @@ a {
     transform-origin: center center;
 }
 
+#spins_overlay {
+    width: 766px;
+    height: 765px;
+    left: 50%;
+    top: 50%;
+    margin-left: -383px;
+    margin-top: -382.5px;
+}
+
 #spins_bottle {
-    width: 212px;
-    height: 245px;
+    width: 293px;
+    height: 329px;
+    z-index: 2;
     top: 50%;
     left: 50%;
-    margin-left: -106px;
-    margin-top: -122.5px;
+    margin-left: -146.5px;
+    margin-top: -164.5px;
     opacity: 0;
     background: url('../img/spins_bottle.png') no-repeat center;
     background-size: contain;
     transition: transform 0.4s linear;
     -o-transition: transform 0.4s linear;
     -webkit-transition: transform 0.4s linear;
+}
+
+#spins_bottle .spin_drop {
+    width: 39px;
+    height: 38px;
+    left: 50%;
+    top: 13%;
+    transform: scale(0);
+    margin-left: -19.5px;
+    background-size: contain;
+    background: url('../img/spinsDrop.png') no-repeat center;
 }
 
 #spins_txt {
@@ -565,4 +588,190 @@ a {
     transition: transform 0.3s linear;
     -o-transition: transform 0.3s linear;
     -webkit-transition: transform 0.3s linear;
+}
+
+#winSpins_overlay {
+    width: 100%;
+    height: 100%;
+    background-color: #000000;
+    opacity: 0;
+}
+
+#fp_logo {
+    width: 247px;
+    height: 260px;
+    margin-left: -123.5px;
+    margin-top: -130px;
+    left: 50%;
+    top: 15%;
+    transform: scale(0);
+    background: url('../img/logo_big.png') no-repeat center;
+    background-size: contain;
+}
+
+#fp_ship {
+    width: 376px;
+    height: 416px;
+    left: -129%;
+    top: 51%;
+    margin-left: -178px;
+    margin-top: -208px;
+}
+
+#fp_ship #ship {
+    width: 221px;
+    height: 336px;
+    background: url('../img/ship.png') no-repeat center;
+    background-size: contain;
+}
+
+#fp_ship #cannon_ball2 {
+    width: 118px;
+    height: 109px;
+    top: -79px;
+    left: 125px;
+    background-size: contain;
+    background: url('../img//cannonBall2.png') no-repeat center;
+}
+
+#fp_ship #canonn_ball1 {
+    width: 259px;
+    height: 244px;
+    top: -10px;
+    left: 108px;
+    background-size: contain;
+    background: url('../img//cannonBall1.png') no-repeat center;
+}
+
+#fp_pirate {
+    width: 528px;
+    height: 697px;
+    top: 17%;
+    left: -160%;
+    margin-left: -264px;
+}
+
+#fp_pirate #pirate {
+    width: 472px;
+    height: 526px;
+    left: 80%;
+    bottom: 24%;
+    margin-left: -337.5px;
+    background: url('../img/pirate_.png') no-repeat center;
+    background-size: contain;
+}
+
+#fp_pirate #boat {
+    width: 482px;
+    height: 297px;
+    left: 50%;
+    bottom: 0%;
+    margin-left: -241px;
+    background: url('../img/boat.png') no-repeat center;
+    background-size: contain;
+}
+
+#fp_install__btn {
+    width: 507px;
+    height: 347px;
+    left: 50%;
+    top: 155%;
+    margin-left: -253.5px;
+}
+
+#fp_install__btn #btn {
+    background: url('../img/install_btn.png') no-repeat center;
+    background-size: contain;
+    width: 507px;
+    height: 135px;
+    bottom: 0px;
+    cursor: pointer;
+}
+
+#fp_install__btn #bird {
+    width: 200px;
+    height: 222px;
+    bottom: 124px;
+    background: url('../img/bird.png') no-repeat center;
+    background-size: contain;
+}
+
+#fp_install__btn #bird #eye {
+    width: 46px;
+    height: 46px;
+    top: 33px;
+    left: 67px;
+    opacity: 0;
+    background: url('../img/eye_close.png') no-repeat center;
+    background-size: contain;
+}
+
+#fp_coins {
+    width: 396px;
+    height: 283px;
+    left: 50%;
+    top: 155%;
+    margin-left: -198px;
+}
+#fp_coins div{
+    background: url('../img/fp_coins_sprite.png') no-repeat;
+}
+#fp_coins div[data-value="1"] {
+    width: 30px;
+    height: 29px;
+    left: 23%;
+    background-position: -5px -5px;
+}
+#fp_coins div[data-value="2"] {
+    width: 76px;
+    height: 66px;
+    top: 23%;
+    background-position: -45px -5px;
+}
+#fp_coins div[data-value="3"] {
+    width: 53px;
+    height: 49px;
+    top: 96%;
+    left: 24%;
+    background-position: -131px -5px;
+}
+#fp_coins div[data-value="4"] {
+    width: 41px;
+    height: 38px;
+    left: 100%;
+    top: 79%;
+    background-position: -194px -5px;
+}
+#fp_coins div[data-value="5"] {
+    width: 59px;
+    height: 54px;
+    top: 60%;
+    left: 41%;
+    background-position: -245px -5px;
+}
+#fp_coins div[data-value="6"] {
+    width: 49px;
+    height: 50px;
+    left: 80%;
+    top: 70%;
+    background-position: -314px -5px;
+}
+#win_coins{
+    width: 100%;
+    height: 100%;
+    /* top: 30%;
+    left: 50%;
+    margin-left: -50px;
+    margin-top: -50px; */
+}
+#win_coins div{
+    background: url('../img/coins_sprite.png');
+    background-repeat: no-repeat;
+    width: 204px;
+    height: 204px;
+    top: 30%;
+    left: 25%;
+    margin-left: - 102px;
+    margin-top: -102px;
+    transform: scale(0);
 }
