--- a/css/style.css
+++ b/css/style.css
@@ -389,7 +389,7 @@ a {
     top: 0px;
     left: 63%;
     margin-left: -80px;
-    background: url('../img/ship.png') no-repeat center;
+    background: url('../img/attack_ship.png') no-repeat center;
     background-size: contain;
 }
 
@@ -759,10 +759,6 @@ a {
 #win_coins{
     width: 100%;
     height: 100%;
-    /* top: 30%;
-    left: 50%;
-    margin-left: -50px;
-    margin-top: -50px; */
 }
 #win_coins div{
     background: url('../img/coins_sprite.png');
